--- a/CustomView/app/build.gradle
+++ b/CustomView/app/build.gradle
@@ -27,4 +27,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.android.support:design:25.2.0'
     testCompile 'junit:junit:4.12'
+//    compile "io.reactivex.rxjava2:rxjava:2.0.1"
+//    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'com.jakewharton.rxbinding:rxbinding:1.0.1'
 }
