--- a/CustomView/app/build.gradle
+++ b/CustomView/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "24.0.2"
+    buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "view.custom.shrimpcolo.com.customview"
         minSdkVersion 15
@@ -10,7 +10,16 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+//        jackOptions {
+//            enabled true
+//        }
     }
+//    compileOptions {
+//        sourceCompatibility JavaVersion.VERSION_1_8
+//        targetCompatibility JavaVersion.VERSION_1_8
+//    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -31,4 +40,8 @@ dependencies {
 //    compile "io.reactivex.rxjava2:rxjava:2.0.1"
 //    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'com.jakewharton.rxbinding:rxbinding:1.0.1'
+    compile 'oxim.digital:rxanim:0.9.1'
+
+//    compile 'io.reactivex:rxandroid:1.2.1'
+//    compile 'io.reactivex:rxjava:1.2.5'
 }
