--- a/TodoKotlin/app/build.gradle
+++ b/TodoKotlin/app/build.gradle
@@ -47,7 +47,10 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     compile 'io.reactivex:rxkotlin:1.0.0'
     compile 'com.facebook.stetho:stetho:1.4.2'
     compile 'com.uphyca:stetho_realm:2.0.0'
+
+    compile 'io.reactivex:rxandroid:1.2.1'
 }
